samples/_failures_safe/1761422976_ded846_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da045ecf.c: In function ‘tokenize’:
./samples/SAFE/__tmp_da045ecf.c:175:13: error: expected expression at end of input
  175 |             pos +=
      |             ^~~
./samples/SAFE/__tmp_da045ecf.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da045ecf.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da045ecf.c:175:13: error: expected declaration or statement at end of input
